# Lightweight-version

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  FORMULAS.md  LICENSE  README.md  config.ini  docker-compose.yml  index.html  pyproject.toml  requirements.txt  robots.example.json  run.bat  run.py
.github/workflows/: ci.yml  deploy.yml  pages.yml
data/: gics_map.csv  mcap.parquet  metrics.parquet  robots.json  rotation.parquet  rotation_tail.parquet  sectors.parquet  spy.parquet  tickers.csv
frontend/: app.css  app.js  candidates.js  compute.js  data.js  index.html  robot_modal.js  robots.js  rrg.js  rrg_modal.js  sectors.js  stock_modal.js  table.js  utils.js
frontend/data/: robots.json  rotation.json  sectors.json  status.json  stocks.json
frontend/data/stock/: A.json  AA.json  AAL.json  AAOI.json  AAON.json  AAPL.json  ABAT.json  ABCL.json  ABNB.json  ABT.json  ACHR.json  ACI.json  ACIW.json  ACLS.json  ACM.json  ACMR.json  ACN.json  ADBE.json  ADEA.json  ADI.json  ADM.json  ADP.json  ADSK.json  ADT.json  ADTN.json  ADUR.json  AEHR.json  AEIS.json  AEM.json  AEO.json  AEP.json  AER.json  AEVA.json  AFRM.json  AG.json  AGCO.json  AGI.json  AGRO.json  AI.json  AIP.json  (+1042 more)
pipeline/: config.py  download.py  export_static.py  health.py  indicators.py  log.py  notify.py  robots.py  rotation.py  schema.py  sectors.py
server/: app.py  asgi.py
tests/: conftest.py  make_fixture.py  test_classify.py  test_contracts.py  test_download.py  test_frontend.py  test_golden.py  test_health.py  test_rotation.py  test_sectors.py  test_server.py  update_golden.py
tests/fixtures/: prices_sample.parquet  robots_sample.json
tests/fixtures/golden/: metrics.parquet  rotation.parquet  rotation_tail.parquet  sectors.parquet
