[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "screener-lw"
version = "0.1.0"
description = "Lightweight US-equity stage + rotation screener (API-first)."
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "httpx>=0.27",          # FastAPI TestClient
    "playwright>=1.40",     # headless-browser frontend smoke test
]

[tool.setuptools]
# Flat layout: these top-level packages are the project.
packages = ["pipeline", "server"]

# ── pytest ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# pythonpath="." lets tests `import pipeline` without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

# ── ruff (lint + format) ────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "tests/fixtures"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "E741",   # ambiguous var names (we use `c`, `v`, `r` for price/vol/row by convention)
    "E701",   # compound one-liners (`if x: return y`) — deliberate guard-clause style
    "B905",   # zip() without strict= — our zips are over equal-length pandas columns
]

# ── pyright (types) ─────────────────────────────────────────────────────────────
[tool.pyright]
include = ["pipeline", "server", "run.py"]
exclude = ["data", "tests/fixtures", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = false   # third-party stubs not always present
